Fix mobile friendliness with code snippets
Sometimes the code would overflow the container and it didn't look
good on mobile.  This makes it so the containers scroll rather than
overflowing which looks nicer.

--- a/sontek-frontend/styles/blog.module.css
+++ b/sontek-frontend/styles/blog.module.css
@@ -7,6 +7,7 @@
     border-radius: 10px;
     padding: 10px;
     margin-bottom: 20px;
+    overflow: scroll;
 }
 
 #post-list {
