--- a/sontek-frontend/styles/global.css
+++ b/sontek-frontend/styles/global.css
@@ -114,6 +114,7 @@ div[data-rehype-pretty-code-fragment] pre, .highlight {
     padding-top: 5px;
     padding-bottom: 5px;
     border-radius: 5px;
+    overflow: scroll;
 }
 
 pre {
